Fixing color contrast issue

--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -5,7 +5,7 @@ $sans-serif-2: 'Heebo', sans-serif;
 $kraft-blue: rgb(64, 75, 107);
 
 $grey: #3A3842;
-$grey-purple: #2f2b3b;
+$grey-purple: #1f1d28;
 $purple: #A74482;
 $light-green: #61E786;
 $honeydew: #EDFFEC;
